align on the button fixed

--- a/prototype/css/responsive.css
+++ b/prototype/css/responsive.css
@@ -196,7 +196,6 @@
 
     #btn_add_loc {
         padding: 2.5%;
-        margin-left: 25%;
     }
 
     #myForm button,
